# SPI_Master

./: README.md  sdkconfig
main/: CMakeLists.txt  main.c
main/app/: Ap_29demo.h  Display_EPD_W21.c  Display_EPD_W21.h  Display_EPD_W21_spi.c  Display_EPD_W21_spi.h  readme.md
